# qmcpack

./: .clang-tidy  .codecov.yml  .cproject  .deepsource.toml  .gitignore  .gitlab-ci.yml  .project  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  CTestConfig.cmake  Doxyfile  Jenkinsfile  LICENSE  Makefile.am  Makefile.in  README  README.md  README_branch.md  aclocal.m4  algorithms  allocator.hpp  aos.changes.md  array.hpp  array_ref.hpp  bootstrap  buffer.hpp  build.sh  codecov.yaml  codecov.yml  config  configure  configure.ac  configure.in  containers  error.hpp  index_range.hpp  (+17 more)
adaptors/fftw/: CMakeLists.txt
boost/: CMakeLists.txt
boost/program_options/: CMakeLists.txt
boost/python/: CMakeLists.txt
boost/serialization/: CMakeLists.txt
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.ug  DoxygenLayout.xml  Makefile  README  config.h  conversion.tex  dbk_callout.sty  dev.cfg  dev.tag  dev_layout.xml  eshdf.dot  features.doc  index.doc  input_qmc.tex  intro_io.tex  qmc_doxygen_tags  qmcpack.cfg  wikiheader.html
doxygen/attic/: Doxyfile.ug  OrbitalOptimization.tex  config.h  header.tex  input_opt.tex  intro.tex  intro_io.tex  qmcpack.css
doxygen/dev/: basic.dox  design.dox  index.dox  jastrow.dox  psi.dox  validation.dox
doxygen/dot/: einsplineset_0.graffle  hamiltonian.dot  lcorbitalset.graffle  particleset.dot  particleset.graffle  simulation.dot
doxygen/images/: DMCTstepConv.eps  compose_figures.pptx  e_trace.eps  twist-avg-conv.eps
doxygen/tutorials/: FSU20120111.jbm.dox  N2MSD.mam.dox
doxygen/ug/: elements.dox
doxygen/usrdoc/: conversion.tex  qmcpack-u-gs.tex
examples/: CMakeLists.txt  README.md  boost_iterator_transform.cpp  lu_fact.cpp  polymorphic_memory_resource.cpp  save.cpp  send_receive.cpp  serialization2.cpp  test4.cpp  test5.cpp
examples/attic/: hamiltonian.xml  input.template.xml  wfs.xml
examples/molecules/: simple-H2O.xml
examples/profiling/: README.md  build_llvm_nvcc_xray_instrumented.sh
examples/sc12_qmc/: getfiles.sh
examples/solids/: simple-LiH.xml
nexus/: .readthedocs.yaml  LICENSE  README  README.md  install  manual_install  nxs_pw_inp_arrays.txt  nxs_pw_inp_bools.txt  nxs_pw_inp_floats.txt  nxs_pw_inp_ints.txt  nxs_pw_inp_strs.txt  pyproject.toml  requirements.txt  requirements_minimal.txt
nexus/docs/: README.md  build_nexus_user_guide.sh  code-style.rst  conf.py  examples.rst  index.rst  installation.rst  nexus_user_guide.tex  overview.rst  python-basics.rst  qmcpack-input-mod.rst  reading.rst  requirements.in  requirements.txt  theory.rst  user-scripts.rst
nexus/examples/: CMakeLists.txt  nexus_example_test.py
nexus/executables/: ntest  nxs-test  produce  qfit  qmca  qmcfit  redo
nexus/lib/: analyze_cp2k_md.py  analyze_pwscf_md.py  basisset.py  bundle.py  conditionals.py  cp2k_analyzer.py  crystal.py  custom_simulation.py  debug.py  developer.py  enhanced_project_manager.py  enhanced_simulation.py  error_handler.py  execute.py  fileio.py  gamess.py  gamess_analyzer.py  gamess_input.py  gaussian_process.py  gaussian_process2.py  generic.py  grid_functions.py  hdfreader.py  machines.py  md_analysis.py  nexus.py  nexus_base.py  niggli_reduce.py  numerics.py  observables.py  opium.py  periodic_table.py  physical_system.py  plotting.py  project_manager.py  pseudopotential.py  pwscf.py  pwscf_analyzer.py  pwscf_data_reader.py  pwscf_error_handler.py  (+36 more)
nexus/nexus/: __init__.py  _bin.py  basisset.py  bundle.py  developer.py  execute.py  fileio.py  gamess.py  gamess_analyzer.py  gamess_input.py  gaussian_process.py  generic.py  generic_settings.py  grid_functions.py  hdfreader.py  machines.py  nexus_base.py  nexus_version.py  numerics.py  numpy_extensions.py  observables.py  periodic_table.py  physical_system.py  project_manager.py  pseudopotential.py  pwscf.py  pwscf_analyzer.py  pwscf_data_reader.py  pwscf_input.py  pwscf_input_new.py  pwscf_postprocessors.py  pyscf_input.py  pyscf_sim.py  qmcpack.py  qmcpack_analyzer.py  qmcpack_analyzer_base.py  qmcpack_converters.py  qmcpack_input.py  qmcpack_method_analyzers.py  qmcpack_property_analyzers.py  (+16 more)
nexus/sphinx_docs/: Makefile  conf.py  examples.rst  index.rst  installation.rst  overview.rst  reading.rst  requirements.txt  theory.rst  usedocs.rst  user-scripts.rst
nexus/tests/: CMakeLists.txt
src/: .clang-format  .clang-tidy  Batching.h  CMakeLists.txt  CMakeLists.txt.ahf  Configuration.h  HDFVersion.h  Makefile.am  Makefile.in  ParticleTags.cpp  ParticleTags.h  ParticleTraits.h  WhatAmI.h  config.h.cmake.in  config.h.in  coulomb_types.h  cuda2hip.h  ohmms-config.h.cmake.in  ohmms-config.h.in  oompi-config.h.cmake.in  qmc_common.cpp  qmc_common.h  qmcpack.settings  qmcpack_version.h
src/ADIOS/: ADIOSTrace.cpp  ADIOSTrace.h  ADIOS_config.cpp  ADIOS_config.cpp.orig  ADIOS_config.h  ADIOS_config.h.orig  ADIOS_profile.cpp  ADIOS_profile.h  ADIOS_verify.cpp  ADIOS_verify.h  AdiosCheckpointInput.cpp  AdiosCheckpointInput.h  gread_qmc_status.ch  gread_qmcstatus.ch  gread_random.ch  gread_walkers.ch  gwrite_qmc_status.ch  gwrite_qmcstatus.ch  gwrite_random.ch  gwrite_walkers.ch  qmc_adios.xml  qmc_adios_double.xml  (+1 more)
superbuild/: CMakeLists.txt  README.md
test/: CMakeLists.txt  all_reduce.cpp  allocator.cpp  array_cref.cpp  array_fancyref.cpp  array_legacy_c.cpp  array_ptr.cpp  array_ref.cpp  array_ref_vector.cpp  array_vector_substitutability.cpp  assignments.cpp  communicator_all_gather.cpp  communicator_all_reduce.cpp  communicator_create.hpp  communicator_divide.cpp  communicator_gather.cpp  communicator_reduce_in_place.cpp  communicator_send.cpp  communicator_send_class_nonintrusive.cpp  communicator_split.cpp  constructors.cpp  cursor.cpp  datatype.cpp  diagonal.cpp  element_access.cpp  element_moved.cpp  element_transformed.cpp  environment_self.cpp  environment_thread.cpp  fill.cpp  index_range.cpp  initializer_list.cpp  iterator.cpp  layout.cpp  legacy_fftw3.cpp  member_array_cast.cpp  minimalistic_ptr.cpp  move.cpp  one_based.cpp  overload.cpp  (+29 more)
test_adaptors/: CMakeLists.txt
tests/: CMakeLists.txt  README
(+12472 files in other folders)
